Closed
Bug 944491
Opened 12 years ago
Closed 12 years ago
Add null-checking asserts to GetGCThingRuntime and GetGCThingMarkBitmap
Categories
(Core :: JavaScript Engine, defect)
Core
JavaScript Engine
Tracking
()
RESOLVED
FIXED
mozilla28
People
(Reporter: mccr8, Assigned: mccr8)
Details
(Whiteboard: [qa-])
Attachments
(1 file)
853 bytes,
patch
|
jonco
:
review+
|
Details | Diff | Splinter Review |
While working on bug 942528, I was getting weird near-NULL crashes in ExposeObjectToActiveJS, which I think was from passing in NULL pointers. I can imagine calling GetGCThingRuntime on a null pointer results in something bad, so I think it would be useful to add a null checking assert to it.
Assignee | ||
Comment 1•12 years ago
|
||
Attachment #8340084 -
Flags: review?(jcoppeard)
Comment 2•12 years ago
|
||
Comment on attachment 8340084 [details] [diff] [review]
Add null-checking assert to GetGCThingRuntime. r=jonco
Review of attachment 8340084 [details] [diff] [review]:
-----------------------------------------------------------------
Fair enough, it would be more obvious what went wrong if we had this assertion.
While you're there, can you add one to GetGCThingMarkBitmap() above too?
Attachment #8340084 -
Flags: review?(jcoppeard) → review+
Assignee | ||
Comment 3•12 years ago
|
||
Yeah, good point. For some reason I'd convinced myself that we'd hit other null check guards before we called that method, but that's not actually the case.
https://hg.mozilla.org/integration/mozilla-inbound/rev/c120711ba3ca
Assignee | ||
Updated•12 years ago
|
Summary: Add null-checking assert to GetGCThingRuntime → Add null-checking asserts to GetGCThingRuntime and GetGCThingMarkBitmap
Comment 4•12 years ago
|
||
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla28
Updated•11 years ago
|
Whiteboard: [qa-]
You need to log in
before you can comment on or make changes to this bug.
Description
•