Bug 944491 - Add null-checking assert to GetGCThingRuntime. r=jonco